--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "*",
+  "homepage": "https://newiihuhu.github.io/app-test/",
   "name": "app-test",
   "version": "0.1.0",
   "private": true,
